# containerd-cloudhypervisor

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/copilot/: aks-benchmark.md
.github/skills/aks-agent-sandbox/: SKILL.md
.github/skills/aks-benchmark/: SKILL.md
.github/skills/pre-release-testing/: SKILL.md
.github/workflows/: ci.yml  release.yml
charts/cloudhv-installer/: values.yaml
charts/cloudhv-installer/templates/: daemonset.yaml
crates/agent/: Cargo.toml
crates/agent/src/: container.rs  lib.rs  main.rs  mount.rs  reaper.rs  server.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  netlink.rs  types.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: api.rs  config.rs  main.rs  netns.rs  pool.rs  shadow.rs  vm_lifecycle.rs
crates/daemon/tests/: integration.rs
crates/proto/: Cargo.toml
crates/proto/src/: lib.rs
crates/shim/: Cargo.toml
crates/shim/benches/: vm_overhead.rs
crates/shim/src/: annotations.rs  config.rs  daemon_client.rs  instance.rs  lib.rs  main.rs  netns.rs  pool.rs  snapshot.rs  virtfs.rs  vm.rs  vsock.rs
crates/shim/tests/integration/: helpers.rs  main.rs  vm_lifecycle.rs
docs/: README.md  architecture.md  configuration.md  development.md  performance.md  releasing.md  sandbox-daemon.md
example/agent-sandbox/: README.md  python-sandbox-template.yaml  requirements.txt  run_fibonacci.py  sandbox-router.yaml
example/aks/: README.md  demo.sh  setup.sh  teardown.sh
example/aks/installer/: Dockerfile  install.sh
example/crictl/: README.md  demo.sh
guest/kernel/: build-kernel.sh
guest/rootfs/: build-rootfs.sh
hacks/: Readme.md  build-dev-image.sh  build-guest-kernel.sh  build-guest.sh  build-static-rust.sh  build-static.sh  test-sysext.sh  util.inc
installer/: Dockerfile  install.sh  test-install.sh
proto/: agent.proto  daemon.proto
reports/: agent-sandbox-timing-cloudhv-aks.md  agent-sandbox-timing-kata-aks.md  aks-150-pod-scale-cloudhv-snapshot-vs-kata.md  aks-150-pod-scale-cloudhv-v070-vs-kata.md  improving-aks-pod-sandboxing-for-agents.md  vmm-evaluation-agentic-workloads.md
(+8 files in other folders)
