[package]
name = "containerd-shim-cloudhv"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "containerd shim for Cloud Hypervisor microVMs"

[[bin]]
name = "containerd-shim-cloudhv-v1"
path = "src/main.rs"

[dependencies]
cloudhv-common = { workspace = true }

# containerd shim protocol (via shimkit, without libcontainer/libseccomp/dbus)
containerd-shimkit = { git = "https://github.com/devigned/runwasi.git", branch = "shimkit-ttrpc-0.10", default-features = false }

# containerd gRPC client (for image digest resolution)
containerd-client = "0.8.0"

# Async runtime
tokio = { workspace = true }


# Error handling
anyhow = { workspace = true }

# Serialization
serde_json = { workspace = true }

# Logging
log = { workspace = true }

# System
nix = { workspace = true }
libc = { workspace = true }

# Time
chrono = { workspace = true }

# Encoding
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "vm_overhead"
harness = false
